
See <<./configuration.adoc#annotations,Annotation Support>> for more information.

For convenience, the XML and Java DSL for Scatter-Gather, based on the `RecipientListRouter`, now sets an `applySequence = true`, so the gatherer part can rely on the default correlation strategies.

See <<./scatter-gather.adoc#scatter-gather,Scatter-Gather>> for more information.

The `AggregatingMessageHandler` now does not split a `Collection<Message<?>>` result of the `MessageGroupProcessor` (unless it is a `SimpleMessageGroupProcessor`) on the output, but emits a single message containing this whole collection as a payload.

See <<./aggregator.adoc#aggregator,Aggregator>> for more information.

The `IntegrationFlows` factory is now marked as deprecated in favor of the fluent API available in the `IntegrationFlow` interface itself.
The factory class will be removed in the future releases.

See <<./dsl.adoc#java-dsl,Java DSL>> for more information.

The `org.springframework.util.concurrent.ListenableFuture` has been deprecated starting with Spring Framework `6.0`.
All Spring Integration async API has been migrated to the `CompletableFuture`.

The Messaging Gateway interface method can now return `Future<Void>` and `Mono<Void>` with a proper asynchronous execution of the downstream flow.

Alongside with a `@MessagingGateway` annotation the interface can also be marked with a `@Primary`.

`@MessagingGateway` interfaces can now be use as an `@Import` resources for configuration.

The default naming strategy for gateway proxy beans can be customized via `@IntegrationComponentScan.nameGenerator()` attribute.
If `AnnotationConfigUtils.CONFIGURATION_BEAN_NAME_GENERATOR` bean is present, it is consulted otherwise before falling back to the `AnnotationBeanNameGenerator`.

See <<./gateway.adoc#gateway, Messaging Gateway>> for more information.
